# links

./: run.sh
chrome/: .jshintrc  bower.json  manifest.json  popup.html  popup.js
chrome/bower_components/rivets/: .bower.json
chrome/lib/: ajax.js  class.js
client/: .jshintrc  bower.json  package.json
client/app/: index.html
client/app/scripts/: app.js
client/app/scripts/controllers/: index.js
client/app/scripts/models/: link.js
client/app/views/: index.html
gui/: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac
gui/src/: Makefile.am  Makefile.in  aiten.ui  aiten.vala
server/: .jshintrc  app.js  package.json  run.sh
server/config/: development.json  production.json
server/controllers/: core.js  links.js
server/lib/: links.js
web/: .gitignore  .yo-rc.json  Gruntfile.js  bower.json  package.json  run.sh
web/app/: index.html
web/app/scripts/: app.js  ext.js  lib.js
web/app/scripts/controllers/: analysis.js  index.js
web/app/scripts/models/: link.js
web/gulp/: proxy.js
web/src/app/: ext.js
web/src/app/analysis/: analysis.html
web/src/app/main/: main.controller.js
web/src/components/navbar/: navbar.controller.js  navbar.html
web2/: .jshintrc
web2/gulp/: build.js
web2/src/: index.html
web2/src/app/: index.js  models.js
web2/src/app/analysis/: analysis.controller.js
web2/src/app/main/: main.controller.spec.js  main.html
